--- a/dme/Makefile
+++ b/dme/Makefile
@@ -3,7 +3,7 @@
 GOPATH		= ../../../../../..
 GW		= $(shell go list -f '{{ .Dir }}' -m github.com/grpc-ecosystem/grpc-gateway)
 APIS		= $(shell go list -f '{{ .Dir }}' -m github.com/gogo/googleapis)
-INCLUDE		= -I. -I${GW} -I${APIS} -I${GOPATH}
+INCLUDE		= -I. -I${GW} -I${APIS} -I${GOPATH} -I../edgeprotogen
 BUILTIN		= Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types,Mgoogle/protobuf/empty.proto=github.com/gogo/protobuf/types,Mgoogle/api/annotations.proto=github.com/gogo/googleapis/google/api,Mgoogle/protobuf/field_mask.proto=github.com/gogo/protobuf/types,Mgoogle/protobuf/descriptor.proto=github.com/golang/protobuf/protoc-gen-go/descriptor
 
 build:
